@@ -1,7 +1,10 @@
 package fr.samlegamer.mcwbyg.client;
 
+import java.util.Arrays;
 import java.util.List;
 
+import fr.addonslib.api.client.McwColors;
+import fr.samlegamer.addonslib.Finder;
 import fr.samlegamer.addonslib.Registration;
 import fr.samlegamer.addonslib.client.APIRenderTypes;
 import fr.samlegamer.addonslib.client.ColorRegistry;
@@ -13,13 +16,15 @@ import net.fabricmc.api.Environment;
 @Environment(EnvType.CLIENT)
 public class Client implements ClientModInitializer
 {
-	private static final List<String> LEAVES_NO_COLORED = List.of("maple", "flowering_yucca", "mahogany");
-	private static final ColorRegistry COLOR = new ColorRegistry(McwByg.MODID, LEAVES_NO_COLORED);
+	private static final ColorRegistry COLOR = new ColorRegistry(new McwColors(Arrays.asList(
+			Finder.makeIdHedge(McwByg.MODID, "flowering_yucca"),
+			Finder.makeIdHedge(McwByg.MODID, "mahogany"),
+			Finder.makeIdHedge(McwByg.MODID, "maple"))));
 
 	@Override
 	public void onInitializeClient()
 	{
-		COLOR.colorsBlock();
+		COLOR.registryBlockColorsAverage();
 		APIRenderTypes.initAllWood(McwByg.MODID, McwByg.WOOD, Registration.getAllModTypeWood());
 		APIRenderTypes.initAllLeave(McwByg.MODID, McwByg.LEAVES);
 		APIRenderTypes.initAllStone(McwByg.MODID, McwByg.STONE, Registration.getAllModTypeStone());
